--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ Flask==1.1.2
 Flask-Bcrypt==0.7.1
 Flask-Login==0.5.0
 Flask-Mail==0.9.1
+Flask-Migrate==2.1.1
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
 html5lib==1.0.1
