--- a/requirements.txt
+++ b/requirements.txt
@@ -42,3 +42,7 @@ urllib3==1.25.8
 webencodings==0.5.1
 Werkzeug==1.0.1
 WTForms==2.3.3
+
+# requirements for Heroku
+psycopg2==2.7.3.1
+gunicorn==19.7.1
