--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.4.3
 appdirs==1.4.3
 bcrypt==3.2.0
 blinker==1.4
@@ -16,7 +17,7 @@ Flask==1.1.2
 Flask-Bcrypt==0.7.1
 Flask-Login==0.5.0
 Flask-Mail==0.9.1
-Flask-Migrate==2.1.1
+Flask-Migrate==2.5.3
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
 html5lib==1.0.1
@@ -25,6 +26,7 @@ ipaddr==2.2.0
 itsdangerous==1.1.0
 Jinja2==2.11.2
 lockfile==0.12.2
+Mako==1.1.3
 MarkupSafe==1.1.1
 msgpack==0.6.2
 packaging==20.3
@@ -33,11 +35,13 @@ Pillow==7.2.0
 progress==1.5
 pycparser==2.20
 pyparsing==2.4.6
+python-dateutil==2.8.1
+python-editor==1.0.4
 pytoml==0.1.21
 requests==2.22.0
 retrying==1.3.3
 six==1.14.0
-SQLAlchemy==1.3.19
+SQLAlchemy==1.3.20
 urllib3==1.25.8
 webencodings==0.5.1
 Werkzeug==1.0.1
